[gd_scene load_steps=3 format=3 uid="uid://bixkcblslaqbe"]

[ext_resource type="Script" uid="uid://c7p75027014gj" path="res://scene/game/skin_shop/skin_shop.gd" id="1_xtgw5"]
[ext_resource type="Texture2D" uid="uid://bxry33bcdyt4w" path="res://aaasets/players/default_player/default_player_fly5.png" id="2_6aqvc"]

[node name="SkinShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xtgw5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Back"

[node name="Coins" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Coins: 0"

[node name="PreviewPanel" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="SkinSprite" type="TextureRect" parent="VBoxContainer/PreviewPanel"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_6aqvc")

[node name="Name" type="Label" parent="VBoxContainer/PreviewPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 42
text = "Default"

[node name="Description" type="Label" parent="VBoxContainer/PreviewPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "-Deault"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
